# gym-occupancy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  analyze_timeseries.ipynb  app.py  convert_sqlite_to_pkl.py  download_artifact.py  extract_git_history.py  fly.toml  occupancy.csv  plot_data.ipynb  pyproject.toml  requirements.txt  scrape.py  setup.sh
.github/workflows/: check-scraper.yml  main.yml  provide_data.yml  scrape.yml
lib/: download.py  heatmap.py  utils.py
